--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ignisign/js",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "private": false,
   "files": [
@@ -10,7 +10,7 @@
   "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ignisign/ignisign-js.git"
+    "url": "https://github.com/ignisign/ignisign-js"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -24,7 +24,7 @@
     "watch": "tsc -b -w --preserveWatchOutput"
   },
   "dependencies": {
-    "@ignisign/public": "1.0.1"
+    "@ignisign/public": "1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
