--- a/examples/npm-based/package.json
+++ b/examples/npm-based/package.json
@@ -7,7 +7,8 @@
     "start": "env-cmd -f ./.env craco --max_old_space_size=4096 --openssl-legacy-provider start",
     "build-web": "env-cmd -f ./.env craco --max_old_space_size=8192 --openssl-legacy-provider build",
     "test": "craco --max_old_space_size=4096 test",
-    "eject": "craco --max_old_space_size=4096 eject"
+    "eject": "craco --max_old_space_size=4096 eject",
+    "clean": "rm -rf ./dist && rm -f tsconfig.tsbuildinfo"
   },
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
@@ -16,7 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.1",
     "@hookform/resolvers": "^2.8.8",
-    "@ignisign/js": "1.0.14",
+    "@ignisign/js": "1.0.15",
     "@mui/material": "^5.13.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
