--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "watch": "tsc -b -w --preserveWatchOutput"
   },
   "dependencies": {
-    "@ignisign/public" : "1.0.112"
+    "@ignisign/public" : "4.0.0-beta.4"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
