--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ignisign/js",
-  "version": "4.0.0",
+  "version": "4.1.0-beta.2",
   "license": "MIT",
   "private": false,
   "files": [
@@ -25,7 +25,7 @@
     "watch": "tsc -b -w --preserveWatchOutput"
   },
   "dependencies": {
-    "@ignisign/public" : "4.0.0"
+    "@ignisign/public" : "4.1.0-beta.2"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
